AMBARI-25130 - Infra Manager: backport fixes from 2.8.0